Updates for F and C

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                     <span class="temperature">12</span>
                     <small class="degrees">
                         °
-                        <a id="c" class="active" href="#">C</a>
+                        <a id="celsius-link" class="active" href="#">C</a>
                          | °
-                        <a id="f" href="#">F</a>
+                        <a id="fahrenheit-link" href="#">F</a>
                     </small>
                 </p>
             </div>
